template/iterative/deepseek/openrouter/qwen/qwen3-235b-a22b-thinking-2507/row_64_update_1_template_20260301_140242.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Production-ready web application environment with Apache, PHP, and sample inventory app'

Parameters:
  VPCCIDR:
    Description: CIDR block for the VPC
    Type: String
    Default: '10.0.0.0/16'
    AllowedPattern: '^(\\d{1,3}\\.){3}\\d{1,3}/(1[6-9]|2[0-8])$'
    ConstraintDescription: Must be a valid CIDR range between /16 and /28

  PublicSubnetCIDR:
    Description: CIDR block for the public subnet
    Type: String
    Default: '10.0.0.0/24'
    AllowedPattern: '^(\\d{1,3}\\.){3}\\d{1,3}/(1[6-9]|2[0-9]|3[0-2])$'
    ConstraintDescription: Must be a valid CIDR range between /16 and /32

  PrivateSubnetCIDR:
    Description: CIDR block for the private subnet
    Type: String
    Default: '10.0.1.0/24'
    AllowedPattern: '^(\\d{1,3}\\.){3}\\d{1,3}/(1[6-9]|2[0-9]|3[0-2])$'
    ConstraintDescription: Must be a valid CIDR range between /16 and /32

  InstanceType:
    Description: EC2 instance type for the web server
    Type: String
    Default: 't3.small'
    AllowedValues:
      - t3.small
      - t3.medium
      - t3.large
    ConstraintDescription: Must be a valid EC2 instance type

  KeyName:
    Description: Name of an existing EC2 KeyPair for SSH access
    Type: AWS::EC2::KeyPair::KeyName
    Default: ''
    AllowedPattern: '^$|^[\\w\\-_.]+$'
    ConstraintDescription: Can be empty or alphanumeric characters, hyphens, underscores, and periods

Mappings:
  AWSRegionToAMI:
    us-east-1:
      AMI: 'ami-0c7217cdde317cfec' # Amazon Linux 2 AMI (HVM), SSD Volume Type
    us-east-2:
      AMI: 'ami-0f748cc59e0c169a5'
    us-west-1:
      AMI: 'ami-071c2813d0c30a14c'
    us-west-2:
      AMI: 'ami-09e1441d7ccffbb4d'
    ap-south-1:
      AMI: 'ami-0d5d9d37c279accbe'
    ap-northeast-1:
      AMI: 'ami-0d393a8dc4b768b18'
    ap-southeast-1:
      AMI: 'ami-0d667a1d3a6e9c821'
    ap-southeast-2:
      AMI: 'ami-0a129a7c811351689'
    eu-central-1:
      AMI: 'ami-06a0077b3caf1e88b'
    eu-west-1:
      AMI: 'ami-0c9c57c6e86a70f99'
    eu-west-2:
      AMI: 'ami-0c735c4b5439d5b89'
    eu-west-3:
      AMI: 'ami-0d5f3b4c9c0d7b5b3'

Resources:
  WebVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: WebApplicationVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: WebAppIGW

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref WebVPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WebVPC
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: PublicSubnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WebVPC
      CidrBlock: !Ref PrivateSubnetCIDR
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: PrivateSubnet

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref WebVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref WebVPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for web server
      VpcId: !Ref WebVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: '0.0.0.0/0'  # In production, restrict to specific IP
      Tags:
        - Key: Name
          Value: WebSecurityGroup

  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [AWSRegionToAMI, !Ref 'AWS::Region', AMI]
      InstanceType: !Ref InstanceType
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      SubnetId: !Ref PublicSubnet
      KeyName: !Ref KeyName
      UserData:
        Fn::Base64: |
          #!/bin/bash
          set -x
          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
          yum update -y
          yum install -y httpd php git
          systemctl start httpd
          systemctl enable httpd
          systemctl restart httpd
          git clone https://github.com/aws-samples/php-app.git /var/www/html/
          chown -R apache:apache /var/www/html
          chmod -R 755 /var/www/html
      Tags:
        - Key: Name
          Value: WebServerInstance

  WebServerEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref WebServer

Outputs:
  PublicIP:
    Description: Public IP address of the web server
    Value: !Ref WebServerEIP
    Export:
      Name: !Sub '${AWS::StackName}-PublicIP'

  ApplicationURL:
    Description: URL to access the sample application
    Value: !Sub 'http://${WebServerEIP}'
    Export:
      Name: !Sub '${AWS::StackName}-ApplicationURL'

  VPCId:
    Description: ID of the created VPC
    Value: !Ref WebVPC
    Export:
      Name: !Sub '${AWS::StackName}-VPCId'

  PublicSubnetId:
    Description: ID of the public subnet
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnetId'
